:art: :: 상수 final화, List 방식 변경